--- a/travel.html
+++ b/travel.html
@@ -158,7 +158,7 @@
           <div class="container" width="40%">
             <p>The Planet Bluegrass Ranch is located off of Highway 36 just
               North of the historic town of Lyons, CO. Bordered by the Saint
-              Vrain River, it is about 30 minutes North of Boulder, and an
+              Vrain, it is about 30 minutes North of Boulder, and an
               hour from Denver or Fort Collins.
             </p>
           </div>
@@ -265,7 +265,7 @@
       <h3 class="mt-3">Things to Do</h3>
       <ul style="list-style-type: none">
         <li><i class="fas fa-guitar"></i> The <a href="https://www.goldhillinn.com/" class="text-body-secondary">Gold Hill Inn</a> is a very important place to us.
-          Here is where we had our first kiss and where Julia proposed to Maggie.
+          Here is where we had our first kiss and where, 4 years later, Julia proposed to Maggie.
           The Inn has an affordable (and delicious) pre-fix dinner and has been the stage for many great bluegrass acts. Check their calendar!
           But be warned, driving or biking here is not for the faint of heart. Expect steep windy dirt roads. If you do make it, check out the General Store and the free nearby camping.</li>
         <li><i class="fas fa-ring"></i> Hike 8 miles up and back <a href=https://www.alltrails.com/trail/us/colorado/south-boulder-peak-trail" class="text-body-secondary">South Boulder Peak</a>, where Maggie proposed to Julia at 8,549'. </li>
