--- a/story.html
+++ b/story.html
@@ -141,7 +141,7 @@
                   </p>
               </div>
               <div class="col-md-6">
-                  <img src="images/ny.png" alt="Placeholder Image" class="img-fluid">
+                  <img src="images/ny.png" alt="NY Topo" class="img-fluid">
               </div>
           </div>
           <!-- Second Row -->
@@ -154,7 +154,7 @@
                   </p>
               </div>
               <div class="col-md-6">
-                  <img src="images/va.png" alt="Placeholder Image" class="img-fluid">
+                  <img src="images/va.png" alt="VA Topo" class="img-fluid">
               </div>
           </div>
           <!-- Third Row -->
@@ -164,7 +164,7 @@
                 <p>Maggie and Julia have a shared love for hiking, hot springs, live music, and their cats Pabu and Raava. They're both known to break into song randomly.</p>
             </div>
             <div class="col-md-6" style="padding-bottom:1rem">
-                <img src="images/usa_nogrid.png" alt="Placeholder Image" class="img-fluid">
+                <img src="images/usa_nogrid.png" alt="USA Topo" class="img-fluid">
             </div>
         </div>
     </div>
