add note about coding the website

--- a/story.html
+++ b/story.html
@@ -135,9 +135,11 @@
           <div class="row">
               <div class="col-md-6">
                   <h2>Julia Kent</h2>
-                  <p>Julia is from the mid-Hudson Valley New York. She moved to Colorado in 2016 to study Atmospheric and Oceanic Sciences at CU Boulder.
+                  <p>Julia is from the mid-Hudson Valley New York. She moved to Colorado in 2016 to study Atmospheric and Oceanic Sciences at CU Boulder immediately after graduating from the University of Rochester.
                     Since 2019 she has worked as a scientist/software engineer creating tooling for climate analysis at the National Center for Atmospheric Research.
-                    She loves to knit, read fantasy, and swim-bike-run triathlons.
+                    She loves to knit, read fantasy, and swim-bike-run triathlons</p>
+                  <p style="font-size: small">
+                    Julia, the "CTO" of our event planning duo, built this website from scratch (without a website builder or template - hi!) because we wanted full customization capabilities. If you're curious about the process you can look at the <a href="https://github.com/jukent/maggie-and-julia" class="text-body-secondary">source code</a>.
                   </p>
               </div>
               <div class="col-md-6">
@@ -148,9 +150,9 @@
           <div class="row mt-4">
               <div class="col-md-6">
                   <h2>Maggie Sawyers</h2>
-                  <p>Maggie was born in Germany, but considers Alexandria, Virginia her hometown. She moved to Colorado in 2017, and has been forming an ever-growing community here since.
+                  <p>Maggie was born in Germany, but considers Alexandria, Virginia her hometown. She studied marketing at Virginia Tech (Go Hokies!), and later moved to Colorado in 2017. Maggie has been forming an ever-growing community here since.
                     Maggie works as an accountant for the Buddhist publication company Shambhala Publications.
-                    She loves permaculture, collaging, and pin-collecting. 
+                    She loves permaculture, collaging, and pin-collecting.
                   </p>
               </div>
               <div class="col-md-6">
