--- a/rsvp.html
+++ b/rsvp.html
@@ -71,9 +71,13 @@
     <main class="main-content">
       <div class="jumbotron jumbotron-fluid jumbotron-rsvp">
         <div class="container">
-            <h1 class="display-4">Will You Join Us?</h1>
+            <h1 class="display-4">Join the Jam</h1>
             <p class="lead">Répondez S'il Vous Plaît</p>
         </div>
+      </div>
+
+      <div class="container" style="padding-top:1rem">
+        <p style="margin-bottom:0 !important">For groups, please search the first name on your invitation. Let us know if you have any difficulty submitting the form.</p>
       </div>
 
       <div class="text-center" style="text-align: center;">
@@ -82,8 +86,6 @@
           src="https://weddingjam.anrsvp.com/?embed=true">
         </iframe>
       </div>
-      
-
     </main>
 
     <footer class="py-3 my-4 border-top bg-light">
