--- a/faq.html
+++ b/faq.html
@@ -117,7 +117,7 @@
       <div class="jumbotron jumbotron-fluid jumbotron-faq">
         <div class="container">
             <h1 class="display-4">F.A.Q.</h1>
-            <p class="lead">Things to Know:</p>
+            <p class="lead">Get the Scoop</p>
         </div>
       </div>
 
