--- a/schedule.html
+++ b/schedule.html
@@ -60,7 +60,7 @@
       <div class="jumbotron jumbotron-fluid jumbotron-schedule">
         <div class="container">
             <h1 class="display-4">Let's Party!</h1>
-            <p class="lead">Our Wedding Events:</p>
+            <p class="lead">Our Wedding Events</p>
         </div>
       </div>
 
