--- a/travel.html
+++ b/travel.html
@@ -146,7 +146,7 @@
   <div class="jumbotron jumbotron-fluid jumbotron-travel">
       <div class="container">
           <h1 class="display-4">Getting There!</h1>
-          <p class="lead">Where to Stay? What to Do?</p>
+          <p class="lead">Plan Your Journey</p>
       </div>
   </div>
 
