--- a/thank-you.html
+++ b/thank-you.html
@@ -72,7 +72,7 @@
           Thank you, Julia's "crazy" Aunt Mickey for helping make our lodging possible. <br><br>
           Thanks to Planet Bluegrass for hosting us on our special day. <br><br>
           Thank you Phish for introducing us. <br><br>
-          Thank you, Peter Marek (<a href="https://rabbitjewelryco.myportfolio.com/work" class="text-body-secondary">Rabbit Jewelry Co.</a>) for our beautiful rings, <br><br>
+          Thank you, Peter Marek (<a href="https://rabbitjewelryco.myportfolio.com/work" class="text-body-secondary">Rabbit Jewelry Co.</a>) for our beautiful rings (and the ring photos), <br><br>
           <a href="https://linktr.ee/katiecurcioart" class="text-body-secondary">Katie Curcio</a> for agreeing to live paint, <br><br>
           <a href="https://www.fiverr.com/veronikawunder" class="text-body-secondary">Veronika Wunder</a> for the custom fantasy map, <br><br>
           and of course thank you to <a href="https://angiewilderphoto.com/" class="text-body-secondary">Angie Wilder</a>, whose photography is featured so prominently throughout this site, for the engagement photoshoot. <br><br>
