mobile sizing of schedule and historic maps

--- a/schedule.html
+++ b/schedule.html
@@ -20,6 +20,17 @@
     <link rel="manifest" href="favicon_io/site.webmanifest">
     <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
 
+    <style>
+          .schedule {
+      width: 60%;
+      height: 250px;
+    }
+    @media (max-width: 1200px) {
+      .schedule {
+        width: 95%;
+      }
+    }
+    </style>
   </head>
 
   <body>
@@ -99,7 +110,7 @@
       </div>
 
       <div class="text-center">
-        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&bgcolor=%23ffffff&showCalendars=0&showTabs=0&mode=AGENDA&showNav=0&showPrint=0&title=Wedding%20J%26M&src=N2QzOTZiZDkyY2I1NDA5MWEzYTBiYTMyMzFmY2Q2MTYxMmU2MDhmOTQyZWY3YTg1OGZiYzhlODQyZjIxZDYxZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&dates=20250801/20250823" style="border:solid 1px #777" width="60%" height="300" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&bgcolor=%23ffffff&showCalendars=0&showTabs=0&mode=AGENDA&showNav=0&showPrint=0&title=Wedding%20J%26M&src=N2QzOTZiZDkyY2I1NDA5MWEzYTBiYTMyMzFmY2Q2MTYxMmU2MDhmOTQyZWY3YTg1OGZiYzhlODQyZjIxZDYxZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&dates=20250801/20250823" class="schedule" style="border:solid 1px #777" frameborder="0" scrolling="no"></iframe>
       </div>  
     </main>
 
