--- a/travel.html
+++ b/travel.html
@@ -79,12 +79,12 @@
       height: 480px;
     }
 
-    /* CSS for limiting maximum image width on smaller screens */
-    @media (max-width: 576px) {
-      .col img {
-        max-width: 50%;
+    @media (max-width: 1200px) {
+      .historic-map{
+        width: 100%;
       }
     }
+    </style>
   </style>
 
   <!-- Favicon -->
@@ -330,15 +330,15 @@
     <div class="container" style="padding:1rem">
       <div class="row text-center">
         <div class="col">
-          <img src="images/NY_Rhinebeck_136439_1939_62500.jpeg" class="img-fluid" alt="Rhinebeck Map"  ondblclick="popImage(this.src)">
+          <img src="images/NY_Rhinebeck_136439_1939_62500.jpeg" class="img-fluid historic-map" alt="Rhinebeck Map"  ondblclick="popImage(this.src)">
           <p>USGS 1939<br>New York - Rhinebeck Quadrangle</p>
         </div>
         <div class="col">
-          <img src="images/CO_Boulder_402336_1904_62500.jpeg" class="img-fluid" alt="Boulder Map" ondblclick="popImage(this.src)">
+          <img src="images/CO_Boulder_402336_1904_62500.jpeg" class="img-fluid historic-map" alt="Boulder Map" ondblclick="popImage(this.src)">
           <p>USGS 1904<br>Colorado - Boulder Quadrangle</p>
         </div>
         <div class="col">
-          <img src="images/VA_Mt Vernon_189090_1894_125000.jpeg" class="img-fluid" alt="Alexandria Map" ondblclick="popImage(this.src)">
+          <img src="images/VA_Mt Vernon_189090_1894_125000.jpeg" class="img-fluid historic-map" alt="Alexandria Map" ondblclick="popImage(this.src)">
           <p>USGS 1894<br>Virginia-Maryland - Mt. Vernon Sheet</p>
         </div>
       </div>
