improve resolution again

--- a/story.html
+++ b/story.html
@@ -200,7 +200,7 @@
           <img src="images/masonry/tetons.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="tall">
-          <img src="images/masonry/loneeaglepeak.jpeg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/maroon.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
           <img src="images/masonry/julias_ring.jpg" alt="" ondblclick="popImage(this.src)">
@@ -210,6 +210,9 @@
         </div>
         <div class="big">
           <img src="images/masonry/rrx.jpg" alt="" ondblclick="popImage(this.src)">
+        </div>
+        <div class="big">
+          <img src="images/masonry/tintype.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
           <img src="images/masonry/snowshoe.jpeg" alt="" ondblclick="popImage(this.src)">
@@ -232,11 +235,17 @@
         <div class="big">
           <img src="images/masonry/princeton.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
+        <div class="tall">
+          <img src="images/masonry/beach.jpg" alt="" ondblclick="popImage(this.src)">
+        </div>
         <div>
           <img src="images/masonry/Pabu.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
           <img src="images/masonry/Raava.jpeg" alt="" ondblclick="popImage(this.src)">
+        </div>
+        <div class="wide">
+          <img src="images/masonry/kittens2.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
           <img src="images/masonry/cats.jpeg" alt="" ondblclick="popImage(this.src)">
