change footer link to repo

--- a/rsvp.html
+++ b/rsvp.html
@@ -91,7 +91,7 @@
     <footer class="py-3 my-4 border-top bg-light">
       <div class="container d-flex justify-content-between align-items-center">
           <div class="col-md-4 text-center text-md-start">
-            <p class="mb-0 text-body-secondary">Coded by <a href="https://github.com/jukent/" class="text-body-secondary">Julia</a><br>with lots of love for Maggie</p>
+            <p class="mb-0 text-body-secondary"><a href="https://github.com/jukent/maggie-and-julia" class="text-body-secondary">Coded by Julia</a><br>with lots of love for Maggie</p>
           </div>
           <div id="countdown" class="col-md-4 mb-0 text-body-secondary text-center"></div>
           <div class="col-md-4 text-center text-md-end">
