--- a/story.html
+++ b/story.html
@@ -138,9 +138,6 @@
                   <p>Julia is from the mid-Hudson Valley New York. She moved to Colorado in 2016 to study Atmospheric and Oceanic Sciences at CU Boulder immediately after graduating from the University of Rochester.
                     Since 2019 she has worked as a scientist/software engineer creating tooling for climate analysis at the National Center for Atmospheric Research.
                     She loves to knit, read fantasy, and swim-bike-run triathlons</p>
-                  <p style="font-size: small">
-                    Julia, the "CTO" of our event planning duo, built this website from scratch (without a website builder or template - hi!) because we wanted full customization capabilities. If you're curious about the process you can look at the <a href="https://github.com/jukent/maggie-and-julia" class="text-body-secondary">source code</a>.
-                  </p>
               </div>
               <div class="col-md-6">
                   <img src="images/ny.png" alt="NY Topo" class="img-fluid">
@@ -266,7 +263,7 @@
     <footer class="py-3 my-4 border-top bg-light">
       <div class="container d-flex justify-content-between align-items-center">
           <div class="col-md-4 text-center text-md-start">
-            <p class="mb-0 text-body-secondary">Coded by <a href="https://github.com/jukent/" class="text-body-secondary">Julia</a><br>with lots of love for Maggie</p>
+            <p class="mb-0 text-body-secondary"><a href="https://github.com/jukent/maggie-and-julia" class="text-body-secondary">Coded by Julia</a><br>with lots of love for Maggie</p>
           </div>
           <div id="countdown" class="col-md-4 mb-0 text-body-secondary text-center"></div>
           <div class="col-md-4 text-center text-md-end">
