--- a/travel.html
+++ b/travel.html
@@ -372,7 +372,7 @@
       </div>
       <div id="countdown" class="col-md-4 mb-0 text-body-secondary text-center"></div>
       <div class="col-md-4 text-center text-md-end">
-          <p class="mb-0 text-body-secondary">Banner Photography by <a href="https://angiewilderphoto.com/" class="text-body-secondary">Angie Wilder</a></p>
+        <p class="mb-0 text-body-secondary">Banner Photography by<br><a href="https://angiewilderphoto.com/" class="text-body-secondary">Angie Wilder</a></p>
       </div>
   </div>
 </footer>
