new picture of Maggie's ring

--- a/schedule.html
+++ b/schedule.html
@@ -96,7 +96,7 @@
               Cocktails: <b>TBD</b><br>
               Reception: <b>TBD</b> - 10 PM</pp>
 
-            <p>Dress: Dress your best - your best for you to feel your best. We want you to be comfortable and, hopefully, ready to dance.<br><br>
+            <p>Dress: Dress your best - your best for you to feel your best. We want you to be comfortable and ready to dance.<br><br>
               Please wear appropriate footwear for walking on a grassy lawn.<br>
               And bring a layer! Colorado regularly has 30° temperature swings between day and night.</p>
 
