--- a/story.html
+++ b/story.html
@@ -127,7 +127,7 @@
 
         <div class="text-center">
           <p style="font-size: small">~It's Love. It's Love. It always was, and it is, and it always will be Love.~</p>
-          <img src="images/setlist.drawio.svg" class="mx-auto d-block setlist" style="border-left: 1.5rem solid white" alt="Set List" ondblclick="popImage(this.src)">
+          <img src="images/setlist_courier.drawio.svg" class="mx-auto d-block setlist" style="border-left: 1.5rem solid white; background:white" alt="Set List" ondblclick="popImage(this.src)">
         </div>
 
         <div class="container mt-5">
@@ -188,7 +188,7 @@
           <img src="images/masonry/foco.jpeg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div>
-          <img src="images/masonry/maggies_ring.jpg" alt="" ondblclick="popImage(this.src)">
+          <img src="images/masonry/MaggieCert2.jpg" alt="" ondblclick="popImage(this.src)">
         </div>
         <div class="wide">
           <img src="images/masonry/tetons.jpeg" alt="" ondblclick="popImage(this.src)">
@@ -253,10 +253,6 @@
               overlay.style.display = 'none';
           }
       </script>
-
-    <div class="text-center" style="padding: 2rem">
-      <img src="images/FamilyTree.drawio.svg" class="mx-auto d-block family-tree" alt="Family Tree">
-    </div>
 
     </main>
 
