--- a/faq.html
+++ b/faq.html
@@ -44,6 +44,7 @@
         align-items: center;
         cursor: pointer;
         font-size: 1.25rem;
+        text-align: left;
       }
   
       .faq-question i {
