right justify arrows

--- a/faq.html
+++ b/faq.html
@@ -61,6 +61,19 @@
         color: inherit;
         padding: 0;
       }
+
+      @media (max-width: 768px) {
+        .d-inline-flex {
+          width: 100%
+        }
+        .btn, .bt.faq-question {
+            width: 100%;
+        }
+        .container-icon {
+          text-align: right;
+          width: 40%;
+        }
+    }
     </style>
   </head>
 
@@ -130,7 +143,9 @@
             <span>
               When is the R.S.V.P. deadline?
             </span>
-            <i class="fas fa-chevron-down ms-2"></i>
+            <div class="container-icon">
+              <i class="fas fa-chevron-down ms-2"></i>
+            </div>
           </button>
         </p>
         <div class="collapse" id="collapseRSVP">
@@ -145,7 +160,9 @@
             <span>
               What will the weather be like?
             </span>
-            <i class="fas fa-chevron-down ms-2"></i>
+            <div class="container-icon">
+              <i class="fas fa-chevron-down ms-2"></i>
+            </div>
           </button>
         </p>
         <div class="collapse" id="collapseWeather">
@@ -161,7 +178,9 @@
             <span>
               Where should I park?
             </span>
-            <i class="fas fa-chevron-down ms-2"></i>
+            <div class="container-icon">
+              <i class="fas fa-chevron-down ms-2" style="text-align:right"></i>
+            </div>
           </button>
         </p>
         <div class="collapse" id="collapseParking">
@@ -176,7 +195,9 @@
             <span>
               What kind of shoes should/shouldn't I wear?
             </span>
-            <i class="fas fa-chevron-down ms-2"></i>
+            <div class="container-icon">
+              <i class="fas fa-chevron-down ms-2"></i>
+            </div>
           </button>
         </p>
         <div class="collapse" id="collapseShoes">
@@ -191,7 +212,9 @@
             <span>
               Is it okay to take pictures with our phones and cameras during the wedding?
             </span>
-            <i class="fas fa-chevron-down ms-2"></i>
+            <div class="container-icon">
+              <i class="fas fa-chevron-down ms-2"></i>
+            </div>
           </button>
         </p>
         <div class="collapse" id="collapsePhotos">
@@ -207,7 +230,9 @@
             <span>
               Can I bring my dog?
             </span>
-            <i class="fas fa-chevron-down ms-2"></i>
+            <div class="container-icon">
+              <i class="fas fa-chevron-down ms-2"></i>
+            </div>
           </button>
         </p>
         <div class="collapse" id="collapseDog">
@@ -222,7 +247,9 @@
             <span>
               Whom should I call with additional questions?
             </span>
-            <i class="fas fa-chevron-down ms-2"></i>
+            <div class="container-icon">
+              <i class="fas fa-chevron-down ms-2"></i>
+            </div>
           </button>
         </p>
         <div class="collapse" id="collapseQuestions">
@@ -237,7 +264,9 @@
             <span>
               Are you changing your last names?
             </span>
-            <i class="fas fa-chevron-down ms-2"></i>
+            <div class="container-icon">
+              <i class="fas fa-chevron-down ms-2"></i>
+            </div>
           </button>
         </p>
         <div class="collapse" id="collapseName">
@@ -252,7 +281,9 @@
             <span>
               Do you have a registry?
             </span>
-            <i class="fas fa-chevron-down ms-2"></i>
+            <div class="container-icon">
+              <i class="fas fa-chevron-down ms-2"></i>
+            </div>
           </button>
         </p>
         <div class="collapse" id="collapseRegistry">
