--- a/faq.html
+++ b/faq.html
@@ -226,6 +226,29 @@
         <br>
 
         <p class="d-inline-flex gap-1">
+          <button class="faq-question btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseAltitude" aria-expanded="false" aria-controls="collapseAltitude">
+            <span>
+              Do I need to be concerned about the altitude?
+            </span>
+            <div class="container-icon">
+              <i class="fas fa-chevron-down ms-2"></i>
+            </div>
+          </button>
+        </p>
+        <div class="collapse" id="collapseAltitude">
+          <div class="card card-body">
+            <p>Our venue is at an altitude of 5,371 feet. If you're coming from sea level, the things to keep in mind are:
+              <ul style="list-style-type: none; padding-left: 0;">
+                <li>1. Sunscreen is a must! The sun's rays are stronger up here and you can burn faster.</li>
+                <li>2. Drink LOTS of water! To ward off headaches, drink an extra liter or two.</li>
+                <li>3. Watch your alcohol. We want you to party and have a good time, but please be mindful that you will get drunk much faster in Colorado.</li>
+              </ul>
+            </p>
+          </div>
+        </div>
+        <br>
+
+        <p class="d-inline-flex gap-1">
           <button class="faq-question btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDog" aria-expanded="false" aria-controls="collapseDog">
             <span>
               Can I bring my dog?
