--- a/schedule.html
+++ b/schedule.html
@@ -97,9 +97,8 @@
               Reception: <b>TBD</b> - 10 PM</pp>
 
             <p>Dress: Dress your best - your best for you to feel your best. We want you to be comfortable and ready to dance.<br><br>
-              Please wear appropriate footwear for walking on a grassy lawn.<br>
-              And bring a layer! Colorado regularly has 30° temperature swings between day and night.</p>
-
+              While this is a formal event, please wear appropriate footwear for walking on a grassy lawn and consider bringing an extra layer. Colorado regularly has 30° temperature swings between day and night.<br><br>
+              And a little reminder: no white.</p>
             <h3 class="mt-3">Sunday, August 24</h3>
             <p>Join us for a casual brunch before your flight home.</p>
             <p>Location: <b>TBD</b> in Lyons, CO</p>
