--- a/travel.html
+++ b/travel.html
@@ -176,6 +176,8 @@
       <h4 class="mt-3"><i class="fas fa-plane"></i> Flying</h3>
       <p>We recommend flying into Denver International Airport (DIA)!</p>
 
+      <p> If coming from sea level, please be mindful of the altitude: wear sunscreen, drink lots of water, and pace your alcohol consumption.</p>
+
       <h4 class="mt-3"><i class="fas fa-car"></i> Rental Cars</h3>
       <p>We're excited to be able to offer up to 25% off discount off of rental cars at <a href="https://www.hertz.com/rentacar/rental-car-deals/joy" class="text-body-secondary">Hertz</a>. (Code: 2269659)</p>
 
