change dark theme alert and remove icons from things to do

--- a/travel.html
+++ b/travel.html
@@ -84,6 +84,16 @@
         width: 100%;
       }
     }
+
+    @media (prefers-color-scheme: dark) {
+      .alert-secondary {
+        --bs-alert-color: #2b2f32;
+        --bs-alert-bg:#e2e3e5;
+        --bs-alert-border-color: #c4c8cb;
+        --bs-alert-link-color: #2b2f32;
+      }
+    }
+
     </style>
   </style>
 
@@ -176,7 +186,7 @@
       <h4 class="mt-3"><i class="fas fa-plane"></i> Flying</h3>
       <p>We recommend flying into Denver International Airport (DIA)!</p>
 
-      <div class="alert alert-dark" role="alert">
+      <div class="alert alert-secondary" role="alert">
         If coming from sea level, please be mindful of the altitude: wear sunscreen, drink lots of water, and pace your alcohol consumption.
       </div>
 
@@ -267,21 +277,21 @@
 
     <div style="padding-top:1rem">
       <h3 class="mt-3">Things to Do</h3>
-      <ul style="list-style-type: none">
-        <li><i class="fas fa-guitar"></i> The <a href="https://www.goldhillinn.com/" class="text-body-secondary">Gold Hill Inn</a> is a very important place to us.
+      <ul>
+        <li>The <a href="https://www.goldhillinn.com/" class="text-body-secondary">Gold Hill Inn</a> is a very important place to us.
           Here is where we had our first kiss and where, 4 years later, Julia proposed to Maggie.
           The Inn has an affordable (and delicious) pre-fix dinner and has been the stage for many great bluegrass acts. Check their calendar!
           But be warned, driving or biking here is not for the faint of heart. Expect steep windy dirt roads. If you do make it, check out the General Store and the free nearby camping.</li>
-        <li><i class="fas fa-ring"></i> Hike 8 miles up and back <a href=https://www.alltrails.com/trail/us/colorado/south-boulder-peak-trail" class="text-body-secondary">South Boulder Peak</a>, where Maggie proposed to Julia at 8,549'. </li>
-        <li><i class="fas fa-mountain"></i> <a href="https://www.nps.gov/romo/index.htm" class="text-body-secondary">Rocky Mountain National Park</a> is too close by to miss on your trip.
+        <li>Hike 8 miles up and back <a href=https://www.alltrails.com/trail/us/colorado/south-boulder-peak-trail" class="text-body-secondary">South Boulder Peak</a>, where Maggie proposed to Julia at 8,549'. </li>
+        <li><a href="https://www.nps.gov/romo/index.htm" class="text-body-secondary">Rocky Mountain National Park</a> is too close by to miss on your trip.
           Check if you need a reservation beforehand.</li>
-        <li><i class="fas fa-tree"></i> <a href="https://www.fs.usda.gov/recarea/arp/recarea/" class="text-body-secondary">Indian Peaks Wilderness</a> is a great alternative to Rocky Mountain.
+        <li><a href="https://www.fs.usda.gov/recarea/arp/recarea/" class="text-body-secondary">Indian Peaks Wilderness</a> is a great alternative to Rocky Mountain.
           It butts up against RMNP, but is significantly less crowded, closer, and cheaper. Just as beautiful though!</li>
-        <li><i class="fas fa-cat"></i> Denver's <a href="https://www.meowwolf.com/denver" class="text-body-secondary">Meow Wolf</a> is an immersive art museum worth getting lost in.
+        <li>Denver's <a href="https://www.meowwolf.com/denver" class="text-body-secondary">Meow Wolf</a> is an immersive art museum worth getting lost in.
           The story continues from the Santa Fe and Vegas locations, but you don't need to have visited those first to enjoy it.</li>
-        <li><i class="fas fa-mug-hot"></i> Take a tea tour at <a href="https://celestialseasonings.com/pages/tea-tour" class="text-body-secondary">Celestial Seasonings</a> in North Boulder.
+        <li>Take a tea tour at <a href="https://celestialseasonings.com/pages/tea-tour" class="text-body-secondary">Celestial Seasonings</a> in North Boulder.
           The mint room is Julia's happy place.</li>
-        <li><i class="fas fa-drum"></i> <a href="https://www.redrocksonline.com/" class="text-body-secondary">Red Rocks Park and Amphitheatre</a> is worth visiting day or night.
+        <li><a href="https://www.redrocksonline.com/" class="text-body-secondary">Red Rocks Park and Amphitheatre</a> is worth visiting day or night.
             There are trails, a museum, and if you time it right - maybe see a show!</li>
       </ul>
       <p>We've compiled a <a href="https://www.alltrails.com/explore/list/local-hikes-for-wedding-guests-d240cb4?b_tl_lat=40.558244270056235&b_tl_lng=-106.51577753950204&b_br_lat=39.419578087877056&b_br_lng=-104.28351747073681" class="text-body-secondary">custom All-Trails list</a> 
