--- a/travel.html
+++ b/travel.html
@@ -293,6 +293,8 @@
           The mint room is Julia's happy place.</li>
         <li><a href="https://www.redrocksonline.com/" class="text-body-secondary">Red Rocks Park and Amphitheatre</a> is worth visiting day or night.
             There are trails, a museum, and if you time it right - maybe see a show!</li>
+        <li><a href="https://bouldercolorado.gov/locations/chautauqua-park" class="text-body-secondary">Chautauqua Park</a> is your classic Boulder view.
+          This is where our engagement photos were taken. There are lots of good hikes from here, but it's also a pleasant spot for a picnic.</li>
       </ul>
       <p>We've compiled a <a href="https://www.alltrails.com/explore/list/local-hikes-for-wedding-guests-d240cb4?b_tl_lat=40.558244270056235&b_tl_lng=-106.51577753950204&b_br_lat=39.419578087877056&b_br_lng=-104.28351747073681" class="text-body-secondary">custom All-Trails list</a> 
         of hikes to check out for all ability and altitude-aclimation levels.</p>
