--- a/thank-you.html
+++ b/thank-you.html
@@ -1,15 +1,29 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
   <head>
-    <script src="./assets/js/color-modes.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <title>Wedding J&M - Gratitude</title>
+    <meta name="description" content="A thank you page with gratitute receipts for Julia and Maggie's Wedding at Planet Bluegrass.">
     <meta name="author" content="Julia Kent">
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/navbar-fixed/">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-    <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Preload Bootstrap CSS -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style">
+
+    <!-- Load Bootstrap CSS from CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
     <link href="./css/custom.css" rel="stylesheet">
+
+    <!-- Preload Banner Image -->
+    <link rel="preload" href="../images/dancing.jpeg" as="image">
+
+    <style>
+      .jumbotron-ty {
+        background-image: url("../images/dancing.jpeg");
+      }
+    </style>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
@@ -96,11 +110,17 @@
             <p class="mb-0 text-body-secondary">Banner Photography by<br><a href="https://angiewilderphoto.com/" class="text-body-secondary">Angie Wilder</a></p>
           </div>
       </div>
-  </footer>
-  
+    </footer>
+    
 
     <script src="./js/custom.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
-    <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Preload Bootstrap JS -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" as="script">
+
+    <!-- Load Bootstrap JS from CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+
   </body>
 </html>
