use svg logo and try responsive images on thank-you

--- a/thank-you.html
+++ b/thank-you.html
@@ -37,9 +37,9 @@
 
   <body>
     <nav class="navbar navbar-expand-md fixed-top">
-      <div class="container-fluid nav-text-container">
-        <a class="navbar-brand nav-link fw-bold py-1 px-0 active" href="index.html" style="font-size: 1em;">
-          <img src="images/JandM.png" alt="J&M" style="height: 1.5em;">
+      <div class="container-fluid nav-text-container" style="margin: 0; padding: 0;">
+        <a class="navbar-brand nav-link fw-bold py-1 px-0 active" href="index.html" style="font-size: 1em">
+          <img src="images/JandM.svg" alt="J&M" style="height: 1.5em; margin:0;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -95,8 +95,29 @@
       </div>
 
       <div class="text-center" style="padding:1rem">
-        <img src="images/Birds.png" width="50%" class="mx-auto d-block" alt="Birds">
-      </div> 
+        <img
+          sizes="(max-width: 1400px) 50vw, 700px"
+          srcset="
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_200.png 200w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_362.png 362w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_481.png 481w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_591.png 591w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_678.png 678w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_759.png 759w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_830.png 830w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_901.png 901w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_971.png 971w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_1036.png 1036w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_1095.png 1095w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_1154.png 1154w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_1211.png 1211w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_1264.png 1264w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_1328.png 1328w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_1377.png 1377w,
+            images/Birds_jwo395/Birds_jwo395_c_scale,w_1400.png 1400w"
+          src="Birds_jwo395_c_scale,w_1400.png"
+          alt="">     
+        </div> 
 
     </main>
 
