--- a/travel.html
+++ b/travel.html
@@ -121,9 +121,9 @@
 
   <body>
     <nav class="navbar navbar-expand-md fixed-top">
-      <div class="container-fluid nav-text-container">
+      <div class="container-fluid nav-text-container" style="margin: 0; padding: 0;">
         <a class="navbar-brand nav-link fw-bold py-1 px-0 active" href="index.html" style="font-size: 1em;">
-          <img src="images/JandM.png" alt="J&M" style="height: 1.5em;">
+          <img src="images/JandM.svg" alt="J&M" style="height: 1.5em;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
