--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@
     <!-- Load Bootstrap CSS from CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-       <!-- Custom CSS -->
+    <!-- Custom CSS -->
     <link href="./css/custom.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -314,8 +314,15 @@
         <br>
 
         <div class="text-center" style="padding-bottom: 1rem">
-          <img src="images/PixelHeart.png" width="10%" class="mx-auto d-block" alt="Pixel Heart">
-        </div>  
+          <img
+            sizes="(max-width: 962px) 30vw, (max-width: 1200px) 200px, 200px"
+            srcset="
+              images/PixelHeart_ti7bw3/PixelHeart_ti7bw3_c_scale,w_200.png 200w,
+              images/PixelHeart_ti7bw3/PixelHeart_ti7bw3_c_scale,w_709.png 709w,
+              images/PixelHeart_ti7bw3/PixelHeart_ti7bw3_c_scale,w_962.png 962w"
+            src="PixelHeart_ti7bw3_c_scale,w_962.png"
+            alt="">        
+          </div>  
 
       </div>
       <script>
@@ -349,7 +356,6 @@
     </footer>
     
     <script src="./js/custom.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
 
     <!-- Preload Bootstrap JS -->
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" as="script">
