--- a/thank-you.html
+++ b/thank-you.html
@@ -135,7 +135,7 @@
     
 
     <script src="./js/custom.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@/js@3"></script>
 
     <!-- Preload Bootstrap JS -->
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" as="script">
